<resources>
    <string name="app_name">Kramerius</string>
    <string name="search_hint">Search ...</string>
    <string name="document_periodical">News &amp; Magazines</string>
    <string name="document_periodical_volume">Periodical Volume</string>
    <string name="document_periodical_item">Issue Number</string>
    <string name="document_page">Page</string>
    <string name="document_manuscript">Manuscript</string>
    <string name="document_monograph">Book</string>
    <string name="document_sound_recording">Sound Recording</string>
    <string name="document_sound_unit">Sound Unit</string>
    <string name="document_track">Track</string>
    <string name="document_map">Map</string>
    <string name="document_graphic">Graphic</string>
    <string name="document_sheetmusic">Sheet Music</string>
    <string name="document_archive">Archive</string>
    <string name="document_unknown">Unknown Type</string>
    <string name="document_all">All</string>
    <string name="models_monograph">Books</string>
    <string name="models_periodical">Newspapers</string>
    <string name="models_map">Maps</string>
    <string name="models_sheetmusic">Sheet Music</string>
    <string name="models_graphic">Graphics</string>
    <string name="models_archive">Archives</string>
    <string name="models_soundrecording">Sound Recordings</string>
    <string name="models_periodicalvolume">Periodical Volumes</string>
    <string name="models_periodicalitem">Periodical Issues</string>
    <string name="models_manuscript">Manuscripts</string>
    <string name="models_page">Pages</string>
    <string name="models_supplement">Supplements</string>
    <string name="models_article">Articles</string>
    <string name="models_internalpart">Internal Parts</string>
    <string name="models_soundunit">Sound Units</string>
    <string name="models_track">Tracks</string>
    <string name="main_title">Kramerius</string>
    <string name="main_menu_title">Kramerius</string>
    <string name="newest_title">Newest</string>
    <string name="selected_title">Recommended</string>
    <string name="most_desirable_title">Most Desirable</string>
    <string name="user_info_title">User Account</string>
    <string name="login_title">Log In</string>
    <string name="virtual_collections_title">Collections</string>
    <string name="settings_title">Settings</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="help_title">Help</string>
    <string name="help_menu_about">About</string>
    <string name="help_menu_content">Digital Library content</string>
    <string name="help_menu_feedback">Send Feedback</string>
    <string name="help_about_app_title">Kramerius</string>
    <string name="help_about_app_subtitle">Digital Library</string>
    <string name="help_about_app_copyright">Copyright © 2014 Moravian library in Brno</string>
    <string name="help_about_app_feedback_prefix">Feedback - Kramerius</string>
    <string name="help_about_app_version_unknown">unknown</string>
 	<string name="help_about_description">
        <![CDATA[     
        The application provides access to digital documents of Czech libraries.
        <br/>You can find here documents that are no longer subject to copyright law - literature, old newspapers and magazines, archives, manuscripts, map collections, LPs and more.
		<br/><br/>If you have any comments, questions or suggestions, please contact us at <a href="mailto:developer@mzk.cz">developer@mzk.cz</a>.
		<br/><br/>The application is developed by the <a href="http://www.mzk.cz">Moravian Library in Brno</a>.
    	]]></string>
    <string name="metadata_title">Details</string>
    <string name="domain_title">Available Libraries</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_virtual_colections">Collections</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_help">Help &amp; Feedback</string>
    <string name="main_menu_feedback">Feedback</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_recent">Recent</string>
    <string name="main_snackbar_message">Selected Library</string>
    <string name="featured_custom">Recommended for You</string>
    <string name="featured_newest">Newest</string>
    <string name="featured_most_desirable">Most Desirable</string>
    <string name="featured_show_all">MORE</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="inaccessible_document_title">Publicly inaccessible document</string>
    <string name="recent_title">Recent</string>
    <string name="search_title">Search</string>
    <string name="search_result_title">Search Result</string>
    <string name="feedback_email">developer@mzk.cz</string>
    <string name="feedback_chooseEmailClient">Select an e-mail client</string>
    <string name="feedback_noEmailClient">You have no e-mail client installed.</string>
    <string name="metadata_title_info_title">Title</string>
    <string name="metadata_title_info_subtitle">Subtitle</string>
    <string name="metadata_title_info_part_number">Part number</string>
    <string name="metadata_title_info_part_name">Part title</string>
    <string name="metadata_identifier_issn">ISSN</string>
    <string name="metadata_identifier_isbn">ISBN</string>
    <string name="metadata_identifier_ccnb">čČNB</string>
    <string name="metadata_identifier_oclc">OCLC</string>
    <string name="metadata_language">Language</string>
    <string name="metadata_languages">Languages</string>
    <string name="metadata_keywords">Keywords</string>
    <string name="metadata_abstract">Abstract</string>
    <string name="metadata_physical_description">Physical description</string>
    <string name="metadata_physical_description_scale">Size</string>
    <string name="metadata_physical_description_extent">Extent</string>
    <string name="metadata_cartographics">Cartographics</string>
    <string name="metadata_cartographics_scale">Scale</string>
    <string name="metadata_cartographics_coordinates">Coordinates</string>
    <string name="metadata_author">Author</string>
    <string name="metadata_authors">Authors</string>
    <string name="metadata_author_name">Name</string>
    <string name="metadata_author_date">Date</string>
    <string name="metadata_author_unknown">Unknown</string>
    <string name="metadata_publisher">Publisher</string>
    <string name="metadata_publishers">Publishers</string>
    <string name="metadata_publisher_name">Publisher\'s name</string>
    <string name="metadata_publisher_date">Date of Publication</string>
    <string name="metadata_publisher_place">Place of Publication</string>
    <string name="metadata_location">Storage Place</string>
    <string name="metadata_location_physical">Storage Place</string>
    <string name="metadata_location_shelf">Shelf Number</string>
    <string name="metadata_notes">Notes</string>
    <string name="metadata_page">Page</string>
    <string name="metadata_page_number">Page Number</string>
    <string name="metadata_page_index">Page Index</string>
    <string name="metadata_periodical_volume">Volume</string>
    <string name="metadata_periodical_volume_unknown">unknown</string>
    <string name="metadata_periodical_volume_date">Year</string>
    <string name="metadata_periodical_volume_date_unknown">unknown</string>
    <string name="metadata_periodical_volume_open">Show Issues</string>
    <string name="metadata_periodical_item">Issue</string>
    <string name="metadata_periodical_item_unknown">unknown</string>
    <string name="metadata_periodical_item_date">Date</string>
    <string name="metadata_periodical_item_date_unknown">unknown</string>
    <string name="metadata_periodical_item_open">Open</string>
    <string name="metadata_open_parent">Open</string>
    <string name="metadata_share">Share</string>
    <string name="sound_unit_tracks">Tracks:</string>
    <string name="sound_unit_play">Play</string>
    <string name="search_switch_filters">Search filters</string>
    <string name="search_switch_results">Back to search results</string>
    <string name="search_used_filters">APPLIED FILTERS</string>
    <string name="search_accessibility">ACCESSIBILITY</string>
    <string name="search_doctype">DOCUMENT TYPE</string>
    <string name="search_author">AUTHOR</string>
    <string name="search_collection">COLLECTION</string>
    <string name="search_language">LANGUAGE</string>
    <string name="search_keyword">KEYWORD</string>
    <string name="search_public_only">Public only</string>
    <string name="search_add_filter">Add filter</string>
    <string name="search_fulltext">Fulltext</string>
    <string name="search_language_select_title">Select languges</string>
    <string name="search_language_select_all">All</string>
    <string name="search_type_basic">Search</string>
    <string name="search_type_fulltext">Fulltext</string>
    <string name="search_filter_name">Name</string>
    <string name="search_filter_author">Author</string>
    <string name="search_filter_language">Language</string>
    <string name="search_filter_doctype">Document Type</string>
    <string name="search_filter_year">Year of Pubblication</string>
    <string name="search_filter_issn">ISSN</string>
    <string name="search_filter_isbn">ISBN</string>
    <string name="search_filter_ddt">DDT</string>
    <string name="search_filter_mdt">MDT</string>
    <string name="search_filter_ccnb">čČNB</string>
    <string name="search_filter_signature">Shelf Number</string>
    <string name="search_filter_sysno">System Number</string>
    <string name="search_filter_keyword">Keyword</string>
    <string name="search_filter_fulltext">Fulltext</string>
    <string name="search_filter_date_invalid_nan">Year of Pubblication must be an integer.</string>
    <string name="search_filter_date_invalid_tltf">Year of Pubblication "to" must be greater or equal to "from"</string>
    <string name="search_filter_date_from">From</string>
    <string name="search_filter_date_to">To</string>
    <string name="dialog_download_title">Download page</string>
    <string name="dialog_download_content">The image will be downloaded to the Kramerius folder.\nWould you like to download the image?</string>
    <string name="dialog_download_private_title">Inaccessible page</string>
    <string name="dialog_download_private_content">The page is publicly inaccessible.\nWe are sorry, the image cannot be downloaded.</string>
    <string name="viewer_menu_home">Home</string>
    <string name="viewer_menu_settings">Settings</string>
    <string name="viewer_menu_screen_lock">Screen Lock</string>
    <string name="viewer_menu_search">Search on page</string>
    <string name="viewer_menu_download">Download Page</string>
    <string name="inaccessible_document_header">document is not publicly accessible.</string>
    <string name="inaccessible_document_why_title">Proč je dokument neveřejný?</string>
    <string name="inaccessible_document_why_content">The Copyright Act allows public access to works only after 70 years from the author\'s time of death.</string>
    <string name="inaccessible_document_how_title">Jak se k dokumentu dostat?</string>
    <string name="inaccessible_document_how_content">Tady bude nějaký vhodný text, který nebude závislý na konkrétním Krameriovi. Asi si pro každého Kraméria držet název instituce a uživatele pak nasměrovat do této instituce.</string>
    <string name="inaccessible_document_report_title">Myslíte si, že by dokument měl být veřejně přístupný?</string>
    <string name="inaccessible_document_report_content">Pokud se Vám zdá, že by dokument měl být přístupný nebo máte jakýkoliv jiný dotaz, ...</string>
    <string name="warn_data_loading_failed">Failed to load data.</string>
    <string name="warn_load_again">AGAIN</string>
</resources>