<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kramerius="http://schemas.android.com/apk/res/cz.mzk.kramerius.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_bottom_divider" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            kramerius:menuIcon="@drawable/ic_settings_grey"
            kramerius:menuTitle="@string/viewer_menu_settings" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            kramerius:menuIcon="@drawable/ic_help_grey"
            kramerius:menuTitle="@string/main_menu_help" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menu_bottom"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            kramerius:menuIcon="@drawable/ic_home_grey"
            kramerius:menuTitle="@string/viewer_menu_home" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            kramerius:menuIcon="@drawable/ic_download_grey"
            kramerius:menuTitle="@string/viewer_menu_download" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_screen_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:clickable="true"
            kramerius:menuIcon="@drawable/ic_screen_rotation_grey"
            kramerius:menuIconSelected="@drawable/ic_screen_lock_rotation_green"
            kramerius:menuTitle="@string/viewer_menu_screen_lock" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_search_on_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:clickable="true"
            kramerius:menuIcon="@drawable/ic_search_grey"
            kramerius:menuIconSelected="@drawable/ic_search_green"
            kramerius:menuTitle="@string/viewer_menu_search" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_bottom_divider" />

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            android:divider="#e8e8e8"
            android:dividerHeight="1dp" >
        </ListView>
    </LinearLayout>

</RelativeLayout>