<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/help_menu_top">

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        app:menuIcon="@drawable/ic_menu_help_about_grey"
        app:menuIconSelected="@drawable/ic_menu_help_about_green"
        app:menuTitle="@string/help_menu_about" />

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        app:menuIcon="@drawable/ic_menu_help_content_grey"
        app:menuIconSelected="@drawable/ic_menu_help_content_green"
        app:menuTitle="@string/help_menu_content" />

    <cz.mzk.kramerius.app.view.MenuItemWidget
        android:id="@+id/menu_help_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_menu"
        app:menuIcon="@drawable/ic_menu_help_feedback_grey"
        app:menuIconSelected="@drawable/ic_menu_help_content_grey"
        app:menuTitle="@string/help_menu_feedback" />

</LinearLayout>