<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary_dark" />

    <LinearLayout
        android:id="@+id/menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_bottom_divider" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            app:menuIcon="@drawable/ic_settings_grey"
            app:menuIconSelected="@drawable/ic_settings_green"
            app:menuTitle="@string/main_menu_settings" />

        <cz.mzk.kramerius.app.view.MenuItemWidget
            android:id="@+id/menu_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            app:menuIcon="@drawable/ic_help_grey"
            app:menuIconSelected="@drawable/ic_help_green"
            app:menuTitle="@string/main_menu_help" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menu_bottom"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_domain_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_menu_domain"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/menu_domain_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_circle"
                    android:padding="10dp"
                    android:src="@drawable/logo_nkp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp">

                    <TextView
                        android:id="@+id/menu_domain_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:text="-"
                        android:textColor="#fff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/menu_domain_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="-"
                        android:textColor="#eee"
                        android:textSize="13dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/img_dropdown_white" />
                </RelativeLayout>
            </LinearLayout>

            <cz.mzk.kramerius.app.view.MenuItemWidget
                android:id="@+id/menu_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_menu"
                app:menuIcon="@drawable/ic_home_grey"
                app:menuIconSelected="@drawable/ic_home_green"
                app:menuTitle="@string/main_menu_home" />

            <cz.mzk.kramerius.app.view.MenuItemWidget
                android:id="@+id/menu_virtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_menu"
                app:menuIcon="@drawable/ic_group_grey"
                app:menuIconSelected="@drawable/ic_group_green"
                app:menuTitle="@string/main_menu_virtual_colections" />

            <cz.mzk.kramerius.app.view.MenuItemWidget
                android:id="@+id/menu_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_menu"
                app:menuIcon="@drawable/ic_search_grey"
                app:menuIconSelected="@drawable/ic_search_green"
                app:menuTitle="@string/main_menu_search" />

            <cz.mzk.kramerius.app.view.MenuItemWidget
                android:id="@+id/menu_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_menu"
                app:menuIcon="@drawable/ic_recent_grey"
                app:menuIconSelected="@drawable/ic_recent_green"
                app:menuTitle="@string/main_menu_recent" />

            <LinearLayout
                android:id="@+id/menu_item_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_primary_dark" />

</RelativeLayout>